--- a/style.css
+++ b/style.css
@@ -1632,6 +1632,9 @@ input:required {
   @media only screen and (min-width: 992px) and (max-width: 1199px) {
     .contact-area .contact-info a {
       font-size: 14px; } }
+      
+#more {display: none;}
+      
 
 #map {
   height: 600px;
