--- a/style.css
+++ b/style.css
@@ -1352,7 +1352,7 @@ input:required {
     content: '';
     z-index: 1; }
   .single-post-area .post-thumbnail {
-    display: block;
+    
     overflow: hidden; }
     .single-post-area .post-thumbnail img {
       width: 100%;
@@ -1661,6 +1661,7 @@ input:required {
 .dropdown {
   position: relative;
   display: inline-block;
+  z-index: 150;  
 }
 
 /* Dropdown Content (Hidden by Default) */
@@ -1670,7 +1671,9 @@ input:required {
   background-color: #f1f1f1;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
+  z-index: 150;
+  visibility: visible;
+  overflow: scroll;  
 }
 
 /* Links inside the dropdown */
@@ -1679,12 +1682,15 @@ input:required {
   padding: 12px 16px;
   text-decoration: none;
   display: block;
+  z-index: 150;
+  visibility: visible;
+  overflow: scroll;
 }
 
 /* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #ddd;}
+.dropdown-content a:hover {background-color: #ddd; z-index: 150;visibility: visible;
+  overflow: scroll;}
 
 /* Show the dropdown menu on hover */
-.dropdown:hover .dropdown-content {display: block;}
-
-
+.dropdown:hover .dropdown-content {display: block; z-index: 150;visibility: visible;
+  overflow: hidden;}
