--- a/style.css
+++ b/style.css
@@ -110,7 +110,7 @@ ul {
 
 .bg-img {
   background-position: center center !important;
-  background-size: cover !important;
+  background-size: contain !important;
   background-repeat: no-repeat !important; }
 
 .jarallax {
@@ -1696,7 +1696,3 @@ input:required {
   height: auto;
 }
 
-#aboutheader{
-  max-height:100%;
-  width:auto;
-}
