background position once again

--- a/style.css
+++ b/style.css
@@ -109,8 +109,8 @@ ul {
     background-color: rgba(0, 0, 0, 0.4); }
 
 .bg-img {
-  background-position: center center !important;
-  background-size: contain !important;
+  
+  background-size: 100% !important;
   background-repeat: no-repeat !important; 
   background-position: left top;}
 
