--- a/style.css
+++ b/style.css
@@ -109,10 +109,10 @@ ul {
     background-color: rgba(0, 0, 0, 0.4); }
 
 .bg-img {
-  
-  background-size: 100% !important;
+  background-position: left top !important;
+  background-size: cover !important;
   background-repeat: no-repeat !important; 
-  background-position: left top !important;}
+  }
 
 .jarallax {
   position: relative;
