--- a/style.css
+++ b/style.css
@@ -109,10 +109,9 @@ ul {
     background-color: rgba(0, 0, 0, 0.4); }
 
 .bg-img {
-  background-position: left top !important;
+  background-position: right bottom !important;
   background-size: cover !important;
   background-repeat: no-repeat !important; 
-  height: fit-content !important;  
   max-height: 100% !important;}
 
 .jarallax {
