--- a/style.css
+++ b/style.css
@@ -112,7 +112,7 @@ ul {
   background-position: right bottom !important;
   background-size: cover !important;
   background-repeat: no-repeat !important; 
-  max-height: 100% !important;}
+  }
 
 .jarallax {
   position: relative;
